# esp32c3-terminal

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.old
main/: CMakeLists.txt  Kconfig.projbuild  gxhtc3.c  gxhtc3.h  idf_component.yml  lvgl_demo_ui.c  myi2c.c  myi2c.h  qmc5883l.c  qmc5883l.h  qmi8658c.c  qmi8658c.h  spi_lcd_touch_example_main.c
ui_smart_gadget/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.h  ui_helpers.c  ui_helpers.h
ui_smart_gadget/fonts/: font_alipuhui.c  font_desktopweather.c  font_myawesome.c  font_qweather.c  ui_font_Terminal.c  ui_font_Terminal22.c
ui_smart_gadget/images/: image_taikong.c  ui_img_1887403499.c  ui_img_2114266571.c  ui_img_227306801.c  ui_img_499049799.c  ui_img_613467726.c  ui_img_944254084.c  ui_img_988448286.c  ui_img_wifi_png.c
ui_smart_gadget/screens/: ui_Mainpage.c  ui_Startpage.c  ui_campasspage.c  ui_gamepage.c  ui_mpupage.c  ui_netapp.c  ui_portpage.c  ui_settingpage.c  ui_voicepage.c  ui_weatherpage.c  ui_wifipage.c
